// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete integration test should flow: Clear button clicked 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
          "id": "search-input",
          "searchQuery": "",
          "status": "PENDING",
          "trigger": "INPUT_CLEAR",
          "url": "models/auto_complete_search?search=",
        },
        "type": "AUTO_COMPLETE_REQUEST",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "search-input": Object {
        "controller": "models",
        "error": null,
        "isDisabled": false,
        "results": Array [
          Object {
            "category": "",
            "label": "results1 ",
          },
          Object {
            "category": "Dolphine",
            "label": "results2 ",
          },
        ],
        "searchQuery": "",
        "status": "PENDING",
        "trigger": "INPUT_CLEAR",
        "url": "models/auto_complete_search?search=",
      },
    },
  },
}
`;

exports[`Autocomplete integration test should flow: initial state 1`] = `
Object {
  "autocomplete": Object {
    "search-input": Object {
      "controller": "models",
      "error": null,
      "isDisabled": false,
      "results": Array [],
      "searchQuery": "",
      "status": "RESOLVED",
      "trigger": "COMPONENT_DID_MOUNT",
      "url": "models/auto_complete_search?search=",
    },
  },
}
`;

exports[`Autocomplete integration test should flow: input focused 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
          "id": "search-input",
          "searchQuery": "",
          "status": "PENDING",
          "trigger": "INPUT_FOCUS",
          "url": "models/auto_complete_search?search=",
        },
        "type": "AUTO_COMPLETE_REQUEST",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "search-input": Object {
        "controller": "models",
        "error": null,
        "isDisabled": false,
        "results": Array [],
        "searchQuery": "",
        "status": "PENDING",
        "trigger": "INPUT_FOCUS",
        "url": "models/auto_complete_search?search=",
      },
    },
  },
}
`;

exports[`Autocomplete integration test should flow: option selected 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
          "id": "search-input",
          "searchQuery": "result",
          "status": "PENDING",
          "trigger": "ITEM_SELECT",
          "url": "models/auto_complete_search?search=",
        },
        "type": "AUTO_COMPLETE_REQUEST",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "search-input": Object {
        "controller": "models",
        "error": null,
        "isDisabled": false,
        "results": Array [
          Object {
            "category": "",
            "label": "result",
          },
        ],
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "ITEM_SELECT",
        "url": "models/auto_complete_search?search=",
      },
    },
  },
}
`;

exports[`Autocomplete integration test should flow: option selected again 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
          "id": "search-input",
          "searchQuery": "result",
          "status": "PENDING",
          "trigger": "ITEM_SELECT",
          "url": "models/auto_complete_search?search=",
        },
        "type": "AUTO_COMPLETE_REQUEST",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "search-input": Object {
        "controller": "models",
        "error": null,
        "isDisabled": false,
        "results": Array [
          Object {
            "category": "",
            "label": "results1 ",
          },
          Object {
            "category": "Dolphine",
            "label": "results2 ",
          },
        ],
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "ITEM_SELECT",
        "url": "models/auto_complete_search?search=",
      },
    },
  },
}
`;

exports[`Autocomplete integration test should flow: request that was triggered by focus is over 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
          "id": "search-input",
          "results": Array [
            Object {
              "category": "",
              "label": "result",
            },
          ],
          "searchQuery": "",
          "status": "RESOLVED",
          "trigger": "INPUT_FOCUS",
          "url": "models/auto_complete_search?search=",
        },
        "type": "AUTO_COMPLETE_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "search-input": Object {
        "controller": "models",
        "error": undefined,
        "isDisabled": false,
        "results": Array [
          Object {
            "category": "",
            "label": "result",
          },
        ],
        "searchQuery": "",
        "status": "RESOLVED",
        "trigger": "INPUT_FOCUS",
        "url": "models/auto_complete_search?search=",
      },
    },
  },
}
`;

exports[`Autocomplete integration test should flow: request that was triggered by option select is over 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
          "id": "search-input",
          "results": Array [
            Object {
              "category": "",
              "label": "results1 ",
            },
            Object {
              "category": "Dolphine",
              "label": "results2 ",
            },
          ],
          "searchQuery": "result",
          "status": "RESOLVED",
          "trigger": "ITEM_SELECT",
          "url": "models/auto_complete_search?search=",
        },
        "type": "AUTO_COMPLETE_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "search-input": Object {
        "controller": "models",
        "error": undefined,
        "isDisabled": false,
        "results": Array [
          Object {
            "category": "",
            "label": "results1 ",
          },
          Object {
            "category": "Dolphine",
            "label": "results2 ",
          },
        ],
        "searchQuery": "result",
        "status": "RESOLVED",
        "trigger": "ITEM_SELECT",
        "url": "models/auto_complete_search?search=",
      },
    },
  },
}
`;
